# PaintTween

./: CMakeLists.txt  README.md
cmake/: FindCuda.cmake  FindOpenEXR.cmake
src/: CMakeLists.txt  paths.pri  src.pro
src/PaintTweenCUDA/: CMakeLists.txt  PaintTweenCUDA.pro  advectedBuffers.cpp  advectedBuffers.h  batchProcessor.cpp  batchProcessor.h  convolution.cu  convolution.h  cudaHostUtil.cpp  cudaHostUtil.h  cudaImageBuffer.h  cudaImagePyramid.cpp  cudaImagePyramid.h  cudaTexture.cpp  cudaTexture.h  dataAccess.cpp  dataAccess.h  downsample.cpp  downsample.h  imageIO.cpp  imageIO.h  imagePyramid.cpp  imagePyramid.h  progressCallback.h  stats.cpp  stats.h  style.cpp  style.h  synthesisFrame.cpp  synthesisFrame.h  synthesisProcessor.cpp  synthesisProcessor.h  texSynth_interface.h  texSynth_kernel.cu  texSynth_kernel.h  texSynth_util.h  types.h  workSchedule.cpp  workSchedule.h  workingBuffers.cpp  (+2 more)
src/PaintTweenGUI/: CMakeLists.txt  PaintTweenGUI.pro  icons.qrc  icons.rcc  main.cpp  networkProtocol.cpp  networkProtocol.h  nlAnimationDialog.cpp  nlAnimationDialog.h  nlConsoleInterface.cpp  nlConsoleInterface.h  nlDataAccess.cpp  nlDataAccess.h  nlDialsAndKnobs.cpp  nlDialsAndKnobs.h  nlGLWidget.cpp  nlGLWidget.h  nlImageContainer.cpp  nlImageContainer.h  nlImageViewerWidget.cpp  nlImageViewerWidget.h  nlInputElements.cpp  nlInputElements.h  nlMainWindow.cpp  nlMainWindow.h  nlParameters.cpp  nlParameters.h  nlPlayRangeWidget.cpp  nlPlayRangeWidget.h  nlShot.cpp  nlShot.h  nlStyleTabWidget.cpp  nlStyleTabWidget.h  nlStyles.cpp  nlStyles.h  nlSynthesisWidget.cpp  nlSynthesisWidget.h  nlSynthesizer.cpp  nlSynthesizer.h  qcommandline.cpp  (+1 more)
